# Khernet

./: .gitignore  CNAME  Gemfile  KhernetUpdater.xml  LICENSE  README.md  _config.dev.yml  _config.yml  build.bat
Database/CONFIG/: Create_CONFIG_database.sql
Database/KH/: Create_KH_database.sql
Khernet.Core/: Khernet.Core.sln
Khernet.Installer/: KhernetInstaller.iss
Khernet.Installer/Khernet.Installer/: Khernet.Installer.sln
Khernet.Installer/Khernet.Installer.Launcher/: App.xaml.cs  AppEnvironment.cs  IFileDownloader.cs  Khernet.Installer.Launcher.csproj  Khernet.Installer.Launcher.sln  MainWindow.xaml  NativeMethods.cs  SquirrelApplicationsUpdater.cs
Khernet.Installer/dotnetInstaller/: create_dotnet_installer.bat
Khernet.Installer/installer/: Cargo.toml  build.rs  resources.rc  resources.res
Khernet.Installer/installer/src/: dotnet_installer.rs  logger.rs  main.rs  repository.rs
Khernet.Installer/nativeLauncher/: generate_native_launcher.bat
Khernet.UI/: .editorconfig  Khernet.UI.sln
Khernet.UI/Khernet.UI.Container/: Khernet.UI.Container.csproj  packages.config
Khernet.UI/Khernet.UI.Presentation/: App.xaml  App.xaml.cs  DialogWindow.xaml  DialogWindow.xaml.cs  Khernet.UI.Presentation.csproj  MainWindow.xaml  Program.cs  (+3 more)
_data/: navigation.yml
_docs/: 01-installation.md  02-updating.md  02-upgrading.md  03-text-message.md  04-files.md  05-markdown-message.md  06-development.md  07-issues.md  08-license.md  09-Version-0160.md
_layout/: default.html
_pages/: 404.md  about.md  blog.md  home.md
_posts/: 2021-11-15-change-update-system.md
(+598 files in other folders)
