[package]
name = "installer"
version = "0.16.0"
authors = ["Luis <info@lemaluis.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winreg = "0.8"
rust-embed="5.9.0"
lazy_static = "1.4.0"
chrono = "0.4.19"
wildmatch = "2.1.0"

[[bin]]
name="Khernet"
path="src/main.rs"

[build-dependencies]
winres = "0.1.11"

[package.metadata.winres]
LegalCopyright = "Copyright © 2021"
InternalName = "Khernet"
OriginalFilename = "Khernet"
ProductName = "Khernet"
ProductVersion = "0.16.0.0"
FileDescription = "Standalone chat application for LAN"
